# speech-deepfake-detection

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
assets/: Project_Milestone_Report_Easton_Sell.docx  trial_metadata.txt
assets/eval_figures/: metrics.json  metrics_0bit.json  metrics_10bit.json  metrics_1bit.json  metrics_2bit.json  metrics_3bit.json  metrics_4bit.json
notebooks/: data_demo.ipynb  evaluation.ipynb
pm/: __init__.py  train_model.py
pm/dataset/: __init__.py  data.md  dataloader.py
pm/model/: __init__.py  model.py
pm/model/weights/: model_100_lr0001.pt
scripts/: train_talapas.slurm
