[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pm"
version = "0.1.0"
description = "Speech deepfake detection"
readme = "README.md"
requires-python = ">=3.8.16"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "torch",
    "soundfile",
    "ipykernel",
    "jupyter",
    "notebook",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["pm*"]
